# lawn-stats

./: .coveragerc  .flake8  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: automated-checks.yml
lawn_stats/: __init__.py  apps.py  auth_hooks.py  data_processing.py  db_router.py  forms.py  models.py  tasks.py  urls.py  views.py
lawn_stats/management/commands/: aggregate_stats.py  clear_monthly_data.py  corpstat_test.py  lawn_test.py  ssh_tunnel.py
lawn_stats/migrations/: 0001_initial.py  0002_monthlystats_incursion_monthlystats_year_and_more.py  0002_unknownaccount.py  0003_fleettypelimit.py
lawn_stats/templates/: chart.html  fats_by_type.html  individual_fats_by_type.html  map_columns.html  monthly_totals.html  upload_afat_data.html  upload_csv.html
lawn_stats/templates/base_plugin/: base.html  index.html
lawn_stats/templates/charts/: creator_charts.html
lawn_stats/templates/lawn_stats/: base.html  base_charts.html  month_year_selector.html
lawn_stats/templates/lawn_stats/charts/: alliance_charts.html  corp_charts.html  creator_charts.html  raw_data.html
lawn_stats/templates/lawn_stats/partials/: top_menu.html
lawn_stats/templatetags/: form_filters.py
testauth/: celery.py
testauth/settings/: local.py
